fix logo on mobile

--- a/public/content/themes/gj-boilerplate/style/sass/_header.scss
+++ b/public/content/themes/gj-boilerplate/style/sass/_header.scss
@@ -40,6 +40,7 @@
     }
 
     img {
+      align-self: flex-start;
       display: block;
       width: auto;
       height: 100%;
