--- a/public/content/themes/gj-boilerplate/style/screen.css
+++ b/public/content/themes/gj-boilerplate/style/screen.css
@@ -513,6 +513,8 @@ sup {
 #header .logo:hover {
       cursor: pointer; }
 #header .logo img {
+      -ms-flex-item-align: start;
+          align-self: flex-start;
       display: block;
       width: auto;
       height: 100%; }
